Restructured sass code and jsx classes, also fixed bug that made scrollbar appear after removing mouse from hover on button

--- a/src/sass/_animations.scss
+++ b/src/sass/_animations.scss
@@ -49,3 +49,12 @@
     transform: translate(0);
   }
 }
+
+@keyframes moveDown {
+  from {
+    transform: translateY(-10rem);
+  }
+  to {
+    transform: translateY(0rem);
+  }
+}
