--- a/src/sass/_navbar.scss
+++ b/src/sass/_navbar.scss
@@ -14,6 +14,8 @@
 
 .navbar.active {
   background-color: $color-tertiary;
+  //box-shadow: 0 0.2px 0.5rem $color-tertiary;
+  animation: moveDown 0.3s ease-in-out;
 }
 
 // MINDKEYZ LOGO
