--- a/src/sass/_typography.scss
+++ b/src/sass/_typography.scss
@@ -22,11 +22,11 @@
 
   &__text-button {
     h1 {
-      font-size: 4rem;
+      font-size: 3.8rem;
     }
 
     h2 {
-      font-size: 2rem;
+      font-size: 1.8rem;
     }
   }
 }
